--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "9.10.1",
+    "yarn": "1.3.2"
+  },
   "dependencies": {
     "classnames": "^2.2.5",
     "history": "^4.7.2",
@@ -11,7 +15,8 @@
     "react-dom": "^16.1.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "serve": "^6.5.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -21,6 +26,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "serve -s build",
+    "postintall": "yarn build"
   }
 }
